--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "4",
+    "mongoose": "5",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
