--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
