--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "4",
     "mongoose": "5",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
